<resources>
    <string name="app_name">EasyCryptSampleJava</string>
    <string name="app_title">EasyCrypt\ Sample\ -\ Java</string>
    <string name="action_settings">Settings</string>

    <string name="tv_select_file_to">Select file to,</string>

    <string name="ed_string_to_encrypt_decrypt_hash">String to encrypt / decrypt / hash</string>
    <string name="ed_password">Password</string>

    <string name="button_hash">Hash</string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_decrypt">Decrypt</string>
    <string name="button_select_hash">Hash</string>
    <string name="button_select_encrypt">Encrypt</string>
    <string name="button_select_decrypt">Decrypt</string>
    <string name="button_grant">Grant</string>
    <string name="button_exit">Exit</string>

    <string name="success_result_to_file">Successfully saved result to file\n%s</string>

    <string name="title_permissions">Permissions</string>

    <string name="message_permissions">Permissions required to run this app correctly. Grant to allow or Exit to close the app.</string>
    <string name="ed_characters_to_use">Characters to use</string>
    <string name="button_random_org">Random.org</string>
    <string name="button_secure_random">SecureRandom</string>
    <string name="ed_length_of_password">Length of password</string>
    <string name="tv_generate_password_with">Generate password with,</string>
    <string name="title_string">String</string>
    <string name="title_file">File</string>
    <string name="title_password">Password</string>
    <string name="title_asymmetric">Asymmetric</string>
    <string name="rb_symmetric">Symmetric</string>
    <string name="rb_asymmetric">Asymmetric</string>
    <string name="button_sign">Sign</string>
    <string name="button_verify">Verify</string>
    <string name="msg_valid">Data verified. Valid.</string>
    <string name="msg_invalid">Cannot verify data. Invalid.</string>
    <string name="tv_password_strength_checker">Password Strength Checker</string>
    <string name="tv_password_key_generation">Password / key generation</string>
    <string name="tv_offline_bf_time">Offline brute-force time:\ </string>
    <string name="tv_online_bf_time">Online brute-force time:\ </string>
    <string name="tv_guesses">Guesses:\ </string>
    <string name="tv_guesses_log_10">Guesses Log 10:\ </string>
    <string name="tv_calc_time">Calc time:\ </string>
    <string name="tv_warning">Warning:\ </string>
    <string name="tab_string">String</string>
    <string name="tab_file">File</string>
    <string name="tab_password">Password</string>

</resources>
